<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="15dp"
    tools:context=".LoginActivity">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/registration_title"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_email_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_email_hint" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/registration_password_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_password_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/registration_register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_register_button" />

    <Button
        android:id="@+id/registration_back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/registration_back_button" />

</LinearLayout>
