<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="15sp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!-- existing AppBarLayout, Toolbar, and other views -->

        <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/cipher2_title"
            android:textSize="34sp" />

        <EditText
            android:id="@+id/key"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cipher2_key"
            android:inputType="text" />

        <EditText
            android:id="@+id/msg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/cipher2_msg"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">


            <Button
                android:id="@+id/encrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:drawablePadding="8dp"
                android:drawableTint="#FFFFFF"
                android:text="@string/cipher1_encryption_btn" />


            <Button
                android:id="@+id/decrypt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:drawablePadding="8dp"
                android:drawableTint="#FFFFFF"
                android:text="@string/cipher2_decryption_btn" />

            <Switch
                android:id="@+id/toggle_binary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@android:drawable/ic_lock_lock"
                android:drawableTint="#FFFFFF"
                android:text="@string/cipher2_toggle_binary" />

        </LinearLayout>

        <TextView
            android:id="@+id/out"
            android:layout_width="380dp"
            android:layout_height="294dp"
            android:layout_margin="16dp"
            android:background="#FFFFFFFF"
            android:gravity="top|center"
            android:padding="4dp"
            android:text="@string/cipher2_output"
            android:textColor="#000000"
            android:textIsSelectable="true"
            android:textSize="18sp" />

        <!-- the TextView text & color will remain static until then...  -->

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


