<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="15sp">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/settings_title"
        android:textSize="34sp" />


    <!-- Dark Mode Switch -->

    <Switch
        android:id="@+id/dark_mode_switch"
        android:layout_width="378dp"
        android:layout_height="71dp"
        android:layout_gravity="end"
        android:text="Dark Mode" />
    <!-- Notification Switch -->
    <Switch
        android:id="@+id/noti_switch"
        android:layout_width="378dp"
        android:layout_height="71dp"
        android:layout_gravity="end"
        android:text="Notifications" />

    <Button
        android:id="@+id/settings_change_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_email" />


    <Button
        android:id="@+id/settings_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_change_password" />


</LinearLayout>